fix navbar collapse

--- a/src/components/Register/Regis.scss
+++ b/src/components/Register/Regis.scss
@@ -17,3 +17,8 @@
   margin-top:8px;
   margin-right: 40px;
 }
+
+.ul-signup a {
+  margin-left: 15px;
+  // padding-bottom:  15px;
+}
